--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,5 +17,6 @@ endif()
 
 add_subdirectory(FuelEngine)
 add_subdirectory(GAME_DEVELOPMENT)
+add_subdirectory(glfw)
 
 set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT SPRING_GAME)
