--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,8 +2,8 @@ cmake_minimum_required(VERSION 3.24)
 
 project(GAME_DEVELOPMENT_PROJECT)
 
-set(CXX_STANDARD 20)
-set(CXX_STANDARD_REQUIRED True)
+set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD_REQUIRED True)
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
 
@@ -15,8 +15,8 @@ else()
 	add_definitions(-DFUELENGINE_LINUX)
 endif()
 
+add_subdirectory(glfw)
 add_subdirectory(FuelEngine)
 add_subdirectory(GAME_DEVELOPMENT)
-add_subdirectory(glfw)
 
 set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT SPRING_GAME)
