--- a/Game_Development/CMakeLists.txt
+++ b/Game_Development/CMakeLists.txt
@@ -1,5 +1,8 @@
-add_executable(SPRING_GAME main.cpp)
-
 include_directories(../FuelEngine/include)
 
-target_link_libraries(SPRING_GAME FuelEngine)
+set(SOURCE_FILES GameDevelopment.cpp)
+set(HEADER_FILES)
+
+add_executable(GAME_DEVELOPMENT_PROJECT  Game_Development.cpp)
+
+target_link_libraries(GAME_DEVELOPMENT_PROJECT PRIVATE FuelEngine)
