--- a/Game_Development/Game_Development.vcxproj
+++ b/Game_Development/Game_Development.vcxproj
@@ -136,7 +136,10 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="main.cpp" />
+    <ClCompile Include="Game_Development.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Game_Development.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
